Fixing issues with font not loading on mobile 2

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ body{
 
 .App {
   text-align: center;
-  font-family: 'Lexend Deca','sans-serif';
   width: 100%;
   margin: 0 auto;
   @font-face {
