--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Lexend Deca','sans-serif';
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @font-face {
+    font-family: 'Lexend Deca', sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+  }
 }
 
 code {
